# slipstream

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
assets/fonts/: LICENSE-Lato.txt
assets/supermodel/: dayto2pe.nvram.nv  daytona2.nvram.nv  lamachin.nvram.nv  lostwsga.nvram.nv  scudau.nvram.nv
examples/: cabinet_spike.rs
src/: app.rs  main.rs
src/cabinet/: gfx.rs  input.rs  media.rs  mod.rs  scene.rs  text.rs
src/domain/: download.rs  emulator.rs  game.rs  gun.rs  launch.rs  mod.rs  paths.rs  quit_watcher.rs  settings.rs  status.rs  wheel.rs
src/emulators/: mod.rs
src/emulators/m2/: ffb_plugin.rs  ini.rs  input_file.rs  mod.rs  nvram.rs
src/emulators/supermodel/: ini.rs  mod.rs  nvram.rs
src/ui/: games.rs  settings.rs
