[package]
name = "slipstream"
version = "0.1.0"
edition = "2021"
description = "Arcade racing launcher: pick a game, it handles the emulator, wheel, and force feedback"
license = "MIT"
repository = "https://github.com/jscottmiller/slipstream"

[dependencies]
anyhow = "1"
directories = "6"
eframe = "0.35"
env_logger = "0.11"
log = "0.4"
rfd = "0.17"
serde = { version = "1", features = ["derive"] }
sevenz-rust2 = "0.21"
sha2 = "0.11"
thiserror = "2"
toml = "1"
ureq = "3"
zip = { version = "8", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
hidapi = "2"

[profile.release]
lto = true
strip = true
